# mysk

./: .pre-commit-config.yaml  CONTEXT.md  README.md  pyproject.toml  skills.py
.github/workflows/: ci.yml
docs/adr/: 0002-pyproject-toml-as-authoring-context-signal.md  0003-mysk-block-key-names.md  0004-typer-cli-conventions.md  0005-skill-library-at-mysk-home.md  0008-skill-operations-interactive-cli-pattern.md  0009-two-channel-output-facade.md  0010-repo-slug-assumes-github.md
docs/diagrams/: skill-operations-pathway.md
skills/grill-with-context/: ADR-FORMAT.md  SKILL.md
skills/improve-codebase-architecture/: SKILL.md
skills/tdd/: deep-modules.md
skills/to-requirements/: SKILL.md
skills/to-tickets/: SKILL.md
src/mysk/: cli.py  console.py  logging_config.py  output.py  skill_operation_pathway.py
tests/: conftest.py  test_cli.py  test_env_isolation.py  test_file_sizes.py  test_logging_config.py  test_output.py  test_skill_operation_pathway.py
tests/commands/: _deploy_support.py  _import_skill_support.py  _refresh_skill_support.py  conftest.py  test_cleanup.py  test_delete_skill.py  test_deploy.py  test_deploy_picker_state.py  test_deploy_reconcile.py  test_deploy_selection.py  test_import_skill.py  test_import_skill_common.py  test_import_skill_local_dir.py  test_import_skill_local_path.py  test_import_skill_repo_root.py  test_library.py  test_list.py  test_mark.py  test_refresh_skill.py  test_refresh_skill_bulk.py  test_refresh_skill_errors.py  test_refresh_skill_single.py  test_undeploy.py
tests/domain/: test_import_url.py  test_provenance.py  (+1 more)
(+26 files in other folders)
